AUTO UPDATE XPATH AND REFERENCES